network/vpc.tf
resource "aws_vpc" "vpc" {
  cidr_block = var.vpc_cidr_block

  tags = {
    Name = "bastion-${var.region}"
  }
}
